Fix carousel width on small devices

--- a/client/src/pages/Recommendations.css
+++ b/client/src/pages/Recommendations.css
@@ -30,7 +30,7 @@
     .carousel-wrapper {
         display: flex;
         overflow: scroll;
-        width: 70vw;
+        width: 100vw;
         align-items: center;
     }
 }
